# BIO_simulation

./: .gitignore  Animal.cpp  Animal.h  CMakeLists.txt  Data.xlsx  Field.cpp  Field.h  Graph.cpp  Graph.h  Info.cpp  Info.h  World.cpp  World.h  main.cpp  Книга 1.xlsx
